--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands =
     pipenv sync --dev
     python -m pytest \
             --cache-clear \
-            --cov=YOUR_PACKAGE \
+            --cov=game_controller \
             --cov-branch \
             --cov-report=term-missing:skip-covered \
 #            --cov-fail-under=100 \
